--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     </div>
                 <div class="imgd">
                     <p>
-                        Ce roman retrace les évènements des guerres civiles au Libéria et en Sierra Léone dans les années 1990. Ainsi, c'est un roman pounctué de scènes atroces. Toutefois, par son style décontracté, la lecture devient plus facile. Ce relâchement s'annonce dès le début du livre:<strong>"Je décide le titre définitif et complet de mon blablabla est Allah n’est pas obligé d’être juste dans toutes ses choses ici-bas. Voilà. Je commence à conter mes salades."</strong><a href="https://fr.wikipedia.org/wiki/Allah_n%27est_pas_oblig%C3%A9">détails</a>
+                        Ce roman retrace les évènements des guerres civiles au Libéria et en Sierra Léone dans les années 1990. Ainsi, c'est un roman ponctué de scènes atroces. Toutefois, par son style décontracté, la lecture devient plus facile. Ce relâchement s'annonce dès le début du livre:<strong>"Je décide le titre définitif et complet de mon blablabla est Allah n’est pas obligé d’être juste dans toutes ses choses ici-bas. Voilà. Je commence à conter mes salades."</strong><a href="https://fr.wikipedia.org/wiki/Allah_n%27est_pas_oblig%C3%A9">détails</a>
                     </p>
                 </div>
                 </li>
@@ -448,7 +448,7 @@
                     </div>
                 <div class="imgd">
                     <p>
-                        A travers ce récit, l'auteur met en avant les principes de l'absurdité, c'est à dire, l'absence d'un ordre rationnel dans les différentes étapes de la vie humaine. Ainsi, à travers ce récit, Camus souligne l'idée que de manère générale l'existence humaine n'a pas de sens, elle est absurde.
+                        A travers ce récit, l'auteur met en avant les principes de l'absurdité de la vie humaine qui se traduit l'absence d'un ordre rationnel dans les différentes péripéties de la vie. Ainsi, à travers ce récit, Camus annonce son idée de l'absurdité de l'existence humaine.
                     </p>
                 </div>
                 </li>
@@ -459,7 +459,7 @@
                     </div>
                 <div class="imgd">
                     <p>
-                        Dans cet ouvrage, l'auteur invite le lecteur à avoir une penséé postitives sur les différens aspects de la vie. Car nos pensées deviennent nos réalités. Ainsi, des pensées négatives nous attirent des évènement malheureux. La simplicité et la clarté de l'ouvrage, à travers d'exemples concrets, sont justes remarquables.
+                        Dans cet ouvrage, l'auteur invite le lecteur à avoir une pensée positive sur les différents aspects de la vie. Car nos pensées deviennent nos réalités. Ainsi, des pensées négatives nous attirent des évènements malheureux. La simplicité et la clarté de l'ouvrage, à travers d'exemples concrets, sont juste remarquables.
                     </p>
                 </div>
                 </li>
