--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     </div>
                 <div class="imgd">
                     <p>
-                        A travers ce récit, l'auteur met en avant les principes de l'absurdité de la vie humaine qui se traduit l'absence d'un ordre rationnel dans les différentes péripéties de la vie. Ainsi, à travers ce récit, Camus annonce son idée de l'absurdité de l'existence humaine.
+                        A travers ce récit, l'auteur met en avant les principes de l'absurdité de la vie humaine qui se traduit par l'absence d'un ordre rationnel dans les différentes péripéties de la vie. Ainsi, à travers ce récit, Camus annonce son idée de l'absurdité de l'existence humaine.
                     </p>
                 </div>
                 </li>
