--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                    Tkinter (interface)
                                 </li>
                                 <li><span class="glyphicon glyphicon-fire"></span>
-                                   Analyse de Données
+                                   Analyse de Données/Webscrapping
                                 </li>
                             </ul>
                         </div>
