--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             <img src="images/oresme.png"/>
                         </div>
                         <div class="description">
-                            Plus de details, cliquez <a href="carousel/carousel.html">ici</a>
+                            <p>Plus de details, cliquez <a href="carousel/carousel.html">ici</a></p>
                             Dans le cadre de mon stage de Master 1, j'ai participé à l'analyse de <br>
                             données écologiques en appliquant des méthodes adaptées telles <br>
                             que la CCA, la Permanova, la NMDS.
@@ -351,7 +351,7 @@
                             <img src="images/lemonnier2.png"/>
                         </div>
                         <div class="description">
-                            Plus de details, cliquez <a href="https://institut-lemonnier.fr/labellise-campus-international-don-bosco-et-louverture-a-linternational-2/">ici</a>
+                            <p>Plus de details, cliquez <a href="https://institut-lemonnier.fr/labellise-campus-international-don-bosco-et-louverture-a-linternational-2/">ici</a></p>
                             Ceci est une enquête menée au sein de l'institut Lemonnier à Caen, <br>
                             portant sur le thème: <strong>Réputation du programme Erasmus et citoyenneté <br>
                             européenne chez les élèves de lycées technologique et professionnel</strong> <br>
@@ -364,7 +364,10 @@
                             <img src="images/logo_pref14%20-%20Copie.jpg"/>
                         </div>
                         <div class="description">
-                            Plus de details, cliquez <a href="https://layekebe.shinyapps.io/kebedashboard/">ici</a>
+                            <p>
+                                Plus de details, cliquez <a href="https://layekebe.shinyapps.io/kebedashboard/">ici</a>
+                            </p>
+                            
                             En tant que stagiaire, j'ai été chargé du projet d'étude sur <br>
                             <strong>La perception réciproque entre les cyclistes d'une part et les automobilistes d'autre part</strong><br>
                             L'étude s'est déroulée en deux étapes: d'abord une enquête qualitative (à l'image du focus group)<br>
