--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <img src="images/lemonnier2.png"/>
                         </div>
                         <div class="description">
-                            <p>Plus de details, cliquez <a href="https://institut-lemonnier.fr/labellise-campus-international-don-bosco-et-louverture-a-linternational-2/">ici</a></p>
+                            <p>Plus de details, cliquez <a href="https://twinspace.etwinning.net/44941/pages/page/977767">ici</a></p>
                             Ceci est une enquête menée au sein de l'institut Lemonnier à Caen, <br>
                             portant sur le thème: <strong>Réputation du programme Erasmus et citoyenneté <br>
                             européenne chez les élèves de lycées technologique et professionnel</strong> <br>
