--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         </div>
                         <div class="description">
                             <p>
-                                Plus de details, cliquez <a href="docs/analyseQuanti.html">ici</a>
+                                Plus de details, cliquez <a href="https://layekebe.shinyapps.io/testapp/">ici</a>
                             </p>
                             
                             En tant que stagiaire, j'ai été chargé du projet d'étude sur <br>
